solve project list on ie compatible.

--- a/ypc/static/css/news.css
+++ b/ypc/static/css/news.css
@@ -42,7 +42,7 @@
 }
 
 .news-item:hover{
-    color: var(--color-list-hover);
+    color: #eb1313;
 }
 
 
