--- a/ypc/static/css/projects.css
+++ b/ypc/static/css/projects.css
@@ -19,6 +19,8 @@
 /*projects*/
 /*************************************/
 
+.project-list-box {
+}
 .project-list{
     display: grid;
     grid-template-columns: repeat( 3, minmax(250px, 1fr) );
@@ -126,13 +128,13 @@
 
 .project-intro > .intro-container{
     width: 1000px;
-    height: var(--intro-container-height);
+    height: 500px;
     margin: 0 auto;
     position: relative;
 }
 
 .intro-description-box{
-    width: var(--intro-description-width);
+    width: 500px;
     height: fit-content;
     position: absolute;
     bottom: 0px;
